# tasks-rs

./: .env  Cargo.toml
.github/workflows/: general.yml  release.yml
.sqlx/: query-34ce1a65180f5b1c6a8a1016a4a1a737651642e2c48ece774abb020e83f6b228.json  query-40c9f1c787b6b3ca1d867d08b16f4dd73c5d049e4cef2a649addb3d7ecec5f6f.json  query-522d7defe14e7831c4e6e63915f2ad605fff4d6e2cba79c695f0ef9d14a8ef64.json  query-627c140284fa796cecf0312009e1314cde8fcd74901fe46917f5b572df1610bf.json  query-8607b836af3275f95c7b5db4455b33a3b6c07cde411f58637f253f440d16b717.json  query-89edc2bbf5ea16a76274426be60550cb8c23c2eddf0cb595ae6f3aaa9b5ffb53.json  query-96f89dc546ee1eba842cccc84da7a91eb276bd44b5bdbf2b1400bb26797ee2a1.json  query-c0e80d0c69586998732d6a026e73b921d40b1b130bd07882802280967d08761d.json  query-c317672129c7171834cfe660245e7e20cd79dcf541fdd21a426f2c63c2756a18.json  query-ca82db57f21398cd4737cc981f8d944db46859cf8aaff6cbdb7487bee781e991.json  query-f84d89a2e2e5c600421d1cc884d940d866e79a775a0cbcb0cf512daab992fa77.json
migrations/: 20240805010239_create_tasks.sql  20240809175958_adding_task_scope.sql
src/: cli.rs  configuration.rs  domain.rs  generator.rs  lib.rs  main.rs  startup.rs  storage.rs  tabular.rs  tasks.rs
src/domain/: new_task.rs  scope.rs  task.rs  task_id.rs
src/scopes/: list.rs
src/tasks/: add.rs  complete.rs  delete.rs  get_last_id.rs  get_task_by_id.rs  list.rs
