[package]
name = "tasks"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tasks-cli"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive", "cargo"] }
dirs = "5.0.1"
itertools = "0.13.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.39.2", default-features = false, features = ["rt", "macros"] }
